--- a/actions.yaml
+++ b/actions.yaml
@@ -16,6 +16,7 @@ outputs:
 runs:
   using: 'docker'
   image: 'Dockerfile'
+  entrypoint: /entrypoint.sh
   args:
     - ${{ inputs.file_type }}
     - ${{ inputs.path }}
