--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -17,4 +17,11 @@ jobs:
           path: 'doc'
       - name: Get the output time
         run: |
-          echo "The time was ${{ steps.step1.outputs.time }}"
+          echo "Compress time ${{ steps.step1.outputs.time }}"
+      - name: Hello world action step
+        id: hello
+        uses: actions/hello-world-docker-action@v1
+        with:
+          who-to-greet: 'Mona the Octocat'
+      - name: Get the output time
+        run: echo "The time was ${{ steps.hello.outputs.time }}"
