--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -13,14 +13,14 @@ jobs:
         uses: ./
         id: step1
         with:
-          suffix: 'txt'
+          suffix: 'tt'
           path: 'test'
           method: 'gzip'
       - name: Get archive
         run: |
           echo "archive : ${{ steps.step1.outputs.archive }}"
 
-          if [ ${{ env.value }} = "1" ]; then
+          if [ "1" = ${{ env.value }} ]; then
             echo "archive create failed, exit"
           else
             tar -tzvf ${{ steps.step1.outputs.archive }}
@@ -36,7 +36,7 @@ jobs:
       - name: Get archive
         run: |
           echo "archive : ${{ steps.step2.outputs.archive }}"
-          if [ ${{ env.value }} = "1" ]; then
+          if [ "1" = ${{ env.value }} ]; then
             echo "archive create failed, exit"
           else
             tar -tjvf ${{ steps.step2.outputs.archive }}
@@ -52,7 +52,7 @@ jobs:
       - name: Get compressed message
         run: |
           echo "archive : ${{ steps.step3.outputs.archive }}"
-          if [ ${{ env.value }} = "1" ]; then
+          if [ "1" = ${{ env.value }} ]; then
             echo "archive create failed, exit"
           else
             unzip ${{ steps.step3.outputs.archive }}
