--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -20,7 +20,7 @@ jobs:
         run: |
           echo "archive : ${{ steps.step1.outputs.archive }}"
 
-          if [ "1" = ${{ env.value }} ]; then
+          if [ "1"x = "${{ env.value }}"x ]; then
             echo "archive create failed, exit"
           else
             tar -tzvf ${{ steps.step1.outputs.archive }}
@@ -36,7 +36,7 @@ jobs:
       - name: Get archive
         run: |
           echo "archive : ${{ steps.step2.outputs.archive }}"
-          if [ "1" = ${{ env.value }} ]; then
+          if [ "1"x = "${{ env.value }}"x ]; then
             echo "archive create failed, exit"
           else
             tar -tjvf ${{ steps.step2.outputs.archive }}
@@ -52,7 +52,7 @@ jobs:
       - name: Get compressed message
         run: |
           echo "archive : ${{ steps.step3.outputs.archive }}"
-          if [ "1" = ${{ env.value }} ]; then
+          if [ "1"x = "${{ env.value }}"x ]; then
             echo "archive create failed, exit"
           else
             unzip ${{ steps.step3.outputs.archive }}
