--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,10 +61,17 @@ jobs:
           file-suffix: 'tex'
           target-directory-path: 'test'
           compress-tool: 'brotli'
+      - name: Set up Python
+        uses: actions/setup-python@v1
+        with: 
+          python-version: 3.8
+      - name: Install brotli
+        run: |
+          python -m pip install --upgrade pip
+          pip install brotli
+
       - name: decompress
         run: |
-          apt-get install brotli
-
           if [ "0"x != "${{ steps.step4.outputs.state }}"x ]; then
             echo "archive create failed, exit"
           else
