--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -61,14 +61,12 @@ jobs:
           file-suffix: 'tex'
           target-directory-path: 'test'
           compress-tool: 'brotli'
-      - name: Set up Python
-        uses: actions/setup-python@v1
-        with: 
-          python-version: 3.8
       - name: Install brotli
         run: |
-          python -m pip install --upgrade pip
-          pip install brotli
+          git clone https://github.com/bagder/libbrotli
+          cd libbrotli
+          ./autogen.sh && ./configure && make && make install
+          cd -
 
       - name: decompress
         run: |
