--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -72,8 +72,6 @@ jobs:
             echo "archive create failed, exit"
           else
             archive=${{ steps.step4.outputs.archive }}
-            brotli -d $archive
-            sudo chown root:root ${archive%.*}
-            ls -l
+            sudo brotli -d $archive
             tar -xvf ${archive%.*}
           fi
